Integrate working motor control + universal main.py
- Updated motor_driver.py to use direct register writes (tested working method)
- Renamed main_station2.py to main.py (works for all stations)
- Main.py now loads config from JSON based on --station argument
- Created config files for all 11 stations (prologue, 02-10, epilogue)
- Each station config defines: motors, keyboard, LED, network settings
- Same Python code runs on ALL Pis, only config file changes
- Added test scripts: scan_slave_id, scan_all_settings, test_keyboard_control
- Fixed test_direct_cvd_correct.py with working method
- Updated requirements.txt (added readchar for tests)

Usage:
  python main.py --station 02   # Master station with keyboard
  python main.py --station 06   # Regular station
  python main.py --station epilogue  # Video-only station

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,4 @@ gpiozero>=1.6.0
 # --------------------------------------------------------------------------
 # Optional / Testing only:
 # --------------------------------------------------------------------------
-# readchar>=4.0.0          # For test_station2_nogpio.py (keyboard input on Mac)
+readchar>=4.0.0          # For test_station2_nogpio.py (keyboard input on Mac)
